--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funções Interativas</title>
+    <title>Funcao</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
+         <button onclick="mudarFundo()">Mudar Cor de Fundo</button>
     </div>
     <script src="script.js"></script>
 </body>
