--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div>
+        <p>ai papai</p>
          <button onclick="mudarFundo()">Mudar Cor de Fundo</button>
     </div>
     <script src="script.js"></script>
