--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
         <p>ai papai</p>
          <button onclick="mudarFundo()">Mudar Cor de Fundo</button>
+         <button onclick="mostrarDataHora()">Mostrar Data e Hora</button>
     </div>
     <script src="script.js"></script>
 </body>
