--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div>
-        <p>ai papai</p>
+        <p id="texto">ai papai</p>
          <button onclick="mudarFundo()">Mudar Cor de Fundo</button>
          <button onclick="mostrarDataHora()">Mostrar Data e Hora</button>
+         <button onclick="mudarTexto()">Mudar Texto</button>
     </div>
     <script src="script.js"></script>
 </body>
