--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <button onclick="mudarFundo()">Mudar Cor de Fundo</button>
          <button onclick="mostrarDataHora()">Mostrar Data e Hora</button>
          <button onclick="mudarTexto()">Mudar Texto</button>
+         <button onclick="mostrarAlerta()">Mostrar Alerta</button>
     </div>
     <script src="script.js"></script>
 </body>
