--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
          <button onclick="mostrarDataHora()">Mostrar Data e Hora</button>
          <button onclick="mudarTexto()">Mudar Texto</button>
          <button onclick="mostrarAlerta()">Mostrar Alerta</button>
+         <button onclick="mudarCorTexto()">Mudar Cor do Texto</button>
     </div>
     <script src="script.js"></script>
 </body>
