--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          <button onclick="mudarTexto()">Mudar Texto</button>
          <button onclick="mostrarAlerta()">Mostrar Alerta</button>
          <button onclick="mudarCorTexto()">Mudar Cor do Texto</button>
+         <button onclick="alternarVisibilidade()">Alternar Visibilidade do Texto</button>
     </div>
     <script src="script.js"></script>
 </body>
