--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
          <button onclick="mostrarAlerta()">Mostrar Alerta</button>
          <button onclick="mudarCorTexto()">Mudar Cor do Texto</button>
          <button onclick="alternarVisibilidade()">Alternar Visibilidade do Texto</button>
+         <p id="texto-toggle">botão oia</p>
+          <p id="data-hora"></p>
     </div>
     <script src="script.js"></script>
 </body>
